--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/stripe-js": "^7.6.1",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "concurrently": "^9.2.0",
@@ -24,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
+    "stripe": "^18.3.0",
     "swiper": "^11.2.10",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
