--- a/Server/package.json
+++ b/Server/package.json
@@ -69,7 +69,10 @@
   "otp-generator": "^4.0.1",
   
     
-  "razorpay": "^2.9.6"
+  "razorpay": "^2.9.6",
+  
+    
+  "stripe": "^18.3.0"
   
   }
 }
