--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.5.0",
     "concurrently": "^9.2.0",
     "copy-to-clipboard": "^3.3.3",
+    "nodemon": "^3.1.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
